feat: add canvas library

--- a/client/index.html
+++ b/client/index.html
@@ -1,15 +1,15 @@
 <html>
   <head>
   <title>Page Title</title>
+
+  <script type="module" src="./lib/index.js"></script>
+  <script src="https://unpkg.com/colyseus.js@^0.14.0/dist/colyseus.js"></script> 
+  <script src="https://pixijs.download/release/pixi.js"></script>
   </head>
   <body>
 
   <h1>My First Heading</h1>
   <p>My first paragraph.</p>
-
-  <script type="module" src="./lib/index.js"></script>
-  <script src="https://unpkg.com/colyseus.js@^0.14.0/dist/colyseus.js"></script> 
-  
 
   </body>
 </html>
