--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,6 @@
   <script src="https://pixijs.download/release/pixi.js"></script>
   </head>
   <body>
-
-  <h1>My First Heading</h1>
-  <p>My first paragraph.</p>
-
+    <h1>Test 2</h1>
   </body>
 </html>
