refactor: separate render  logic

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
   <head>
   <title>Page Title</title>
 
-  <script type="module" src="./lib/scripts/index.js"></script>
+  <script type="module" src="./lib/index.mjs"></script>
   <script src="https://unpkg.com/colyseus.js@^0.14.0/dist/colyseus.js"></script> 
   <script src="https://pixijs.download/release/pixi.js"></script>
   </head>
