feat: add download button

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,6 @@
   <script src="https://pixijs.download/release/pixi.js"></script>
   </head>
   <body>
-    <h1>Test 2</h1>
+    <button id="debug_download_button">Download debug log</button>
   </body>
 </html>
