--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
   <script type="module" src="./lib/index.mjs"></script>
   <script src="https://unpkg.com/colyseus.js@^0.14.0/dist/colyseus.js"></script> 
   <script src="https://pixijs.download/release/pixi.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
   </head>
   <body>
     <button id="debug_download_button">Download debug log</button>
